# cmd/web/authhandler.go
@@ -5,15 +5,84 @@ import (
 	"customerservice/internal/entity"
 	"customerservice/internal/utils"
 	"encoding/json"
+	"errors"
 	"fmt"
 	"github.com/kataras/jwt"
+	"gorm.io/gorm"
+	"log"
 	"net/http"
 	"time"
 )
 
+//this check the otp
+const (
+	// See http://golang.org/pkg/time/#Parse
+	timeFormat = "2006-01-02 15:04 MST"
+)
+
 func (app *App) LoginHAndler(w http.ResponseWriter, r *http.Request) {
+
+	var user entity.MessageAuth
 	var request models.LoginRequest
-	var user entity.User
+
+	err := json.NewDecoder(r.Body).Decode(&request)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	tx := app.MessageAuthModel.Db.Where("phone = ?", request.Phone).First(&user)
+
+	if !errors.Is(tx.Error, gorm.ErrRecordNotFound) {
+		v := "2014-05-03 20:57 UTC"
+		then, err := time.Parse(timeFormat, v)
+		if err != nil {
+			fmt.Println(err)
+			return
+		}
+		duration := time.Since(then)
+		fmt.Println(duration.Minutes())
+
+		//Check for otp as well
+		if request.Otp == user.Otp && duration.Minutes() < 1 {
+			// generate jwt
+			var sharedKey = []byte("sercrethatmaycontainch@r$32chars")
+
+			token, err := jwt.Sign(jwt.HS256, sharedKey, user, jwt.MaxAge(15*time.Minute))
+			if err != nil {
+				http.Error(w, err.Error(), http.StatusInternalServerError)
+				return
+			}
+
+			js, err := json.Marshal(models.Response{
+				Message: "Success",
+				Status:  http.StatusOK,
+				Data:    token,
+			})
+			if err != nil {
+				http.Error(w, err.Error(), http.StatusInternalServerError)
+				return
+			}
+
+			w.Header().Set("Content-Type", "application/json")
+			w.Write(js)
+
+		} else {
+			http.Error(w, "OTP Didn't Match or Expired", http.StatusBadRequest)
+			return
+		}
+
+	} else {
+		http.Error(w, "User Not Found", http.StatusBadRequest)
+		return
+	}
+
+}
+
+// This send the otp to the user
+func (app *App) SignupHandler(w http.ResponseWriter, r *http.Request) {
+	var request models.SignupRequest
+	var user entity.MessageAuth
 	//Decoding the json body in Login Request struct
 
 	err := json.NewDecoder(r.Body).Decode(&request)
@@ -21,81 +90,41 @@ func (app *App) LoginHAndler(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	// works because destination struct is passed in
-	app.UserModel.Db.Where("email = ?", request.Email).Find(&user)
-	fmt.Println(user)
 
-	_, err = json.Marshal(&user)
+	//Send otp here --
+	otp, _ := utils.GenerateOTP(5)
+	_, err = utils.SendOtp(fmt.Sprintf("Your OTP Is %s", otp), request.Phone)
+
 	if err != nil {
-		// handle error
-		http.Error(w, err.Error(), http.StatusNotFound)
-		return
-	}
 
-	// Checking for password of the user
+		// works because destination struct is passed in
+		tx := app.MessageAuthModel.Db.Where("phone = ?", request.Phone).First(&user).Error
+		fmt.Println(tx)
+		if errors.Is(tx, gorm.ErrRecordNotFound) {
 
-	check := utils.CheckPasswordHash(request.Password, user.Password)
+			//Create a record in the db and send otp
+			messageauth := entity.MessageAuth{CreatedAt: time.Now(), LastLogin: time.Now(), Phone: request.Phone, Ip: utils.GetIP(r), Otp: otp}
 
-	if check {
+			result := app.MessageAuthModel.Db.Create(&messageauth) // pass pointer of data to Creat
+			log.Println(result)
 
-		// generate jwt
-		var sharedKey = []byte("sercrethatmaycontainch@r$32chars")
-
-		token, err := jwt.Sign(jwt.HS256, sharedKey, user, jwt.MaxAge(15*time.Minute))
-		if err != nil {
-			http.Error(w, err.Error(), http.StatusInternalServerError)
-			return
+		} else {
+			// just send  the otp and update the table
+			// Update with conditions
+			app.MessageAuthModel.Db.Model(&entity.MessageAuth{}).Where("phone = ?", request.Phone).Updates(&entity.MessageAuth{Otp: otp, LastLogin: time.Now()})
 		}
 
-		js, err := json.Marshal(models.Response{
-			Message: "Success",
-			Status:  http.StatusOK,
-			Data:    token,
-		})
-		if err != nil {
-			http.Error(w, err.Error(), http.StatusInternalServerError)
-			return
-		}
-
-		w.Header().Set("Content-Type", "application/json")
-		w.Write(js)
-	}
-
-}
-
-func (app *App) SignupHandler(w http.ResponseWriter, r *http.Request) {
-	var request models.SignupRequest
-	err := json.NewDecoder(r.Body).Decode(&request)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-
-	//Hashing the password --before storing in the db
-
-	hash, err := utils.HashPassword(request.Password)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-
-	}
-
-	user := entity.User{FirstName: request.FirstName, LastName: request.LastName, Phone: request.Phone, Email: request.Email, Password: hash}
-
-	result := app.UserModel.Db.Create(&user) // pass pointer of data to Create
-	if result.Error != nil {
-		http.Error(w, result.Error.Error(), http.StatusBadRequest)
-		return
-	}
-
-	jData, err := json.Marshal(&user)
-	if err != nil {
-		// handle error
+	} else {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	w.Header().Set("Content-Type", "application/json")
+	js, _ := json.Marshal(models.Response{
+		Message: "Success",
+		Status:  200,
+		Data:    "OTP Sent",
+	})
 
-	w.Write(jData)
+	w.Header().Set("Content-Type", "application/json")
+	w.Write(js)
 
 }
